# ignition-kernel

./: .gitignore  .gitmodules  README.md  pyproject.toml
ignition_kernel/: __init__.py  __main__.py  provisioner.py  template_kernel.json
ignition_project/: .gitignore  README.md  pack_project.py  unpack_project.py
ignition_project/python/: toml.py
ignition_project/python/shared/data/: easing.py  expression.py  sample.py  stats.py
ignition_project/python/shared/data/binary/: bincode.py  bitmask.py
ignition_project/python/shared/data/plastic/: column.py  core.py  meta.py  record.py  recordset.py
ignition_project/python/shared/data/simulators/: drunk.py  process.py
ignition_project/python/shared/data/types/: adhoc.py  dictclass.py  dictslots.py  enum.py  memo.py  mixins.py  pojo.py  stats.py
ignition_project/python/shared/data/yaml/: core.py
ignition_project/python/shared/tools/: crowbar.py  dump.py  enum.py  expression.py  global.py  hotload.py  logging.py  macro.py  memoize.py  meta.py  overwatch.py  patterns.py  pretty.py  profile.py  runtime.py  sidecar.py  thread.py  wrapped.py
ignition_project/python/shared/tools/debug/: _test_scenario.py  breakpoint.py  codecache.py  frame.py  trap.py
ignition_project/python/shared/tools/jupyter/: catch.py  comm.py  core.py  logging.py  messages.py  meta.py  zmq.py  (+2 more)
ignition_project/python/test/: __init__.py  ascript.py  evaluation.py  ex.py
ignition_project/webdev/kernel/: config.json  doDelete.py  doGet.py  doHead.py  doOptions.py  doPatch.py  doPost.py  doPut.py  doTrace.py
workspace/: Test-transpile.ipynb
(+47 files in other folders)
